# qwen3-voice-embedding-server

./: .dockerignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/embeddings/: decorator.py  router.py  service.py  settings.py  transformer.py
