[project]
dependencies = [
    "fastapi[standard]>=0.135.2",
    "python-datauri>=3.0.2",
    "openai>=2.29.0",

    "numpy>=2.4.3",
    "librosa>=0.11.0",
    "huggingface-hub>=1.8.0",
    "onnxruntime-webgpu>=1.25.0.dev20260212001",
    "pydantic-settings>=2.13.1",
]
name = "qwen3-voice-embedding-server"
version = "0.1.2"
description = "Default template for PDM package"
authors = [{ name = "Wei Ji (FlySkyPie)", email = "c445dj544@gmail.com" }]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.fastapi]
entrypoint = "src.main:app"

[tool.pdm.scripts]
start.cmd = "fastapi run"

dev.cmd = "fastapi dev"

